--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav-left">
             <a href="">
                 <h1 class="nav-title">
-                    anna casillas
+                    anna casillas hola
                 </h1>
             </a>
         </div>
@@ -44,9 +44,7 @@
             ¿Quién soy yo?
         </div>
         <div class="about-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur laborum!
         </div>
     </section>
     <section class="proyectos">
