--- a/index.html
+++ b/index.html
@@ -44,12 +44,58 @@
             ¿Quién soy yo?
         </div>
         <div class="about-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur laborum!
         </div>
     </section>
     <section class="proyectos">
+        <h1 class="header-section">/galeria/</h1>
+        <div class="container">
+            <div class="bgimg-ajolote">
+                <a href="">
+                    <p class="redirigir">/naturaleza/</p>
+                </a>
+            </div>
+            <div class="bgimg-autoretratos">
+                <a href="">
+                    <p class="redirigir">/autoretratos/</p>
+                </a>
+            </div>
+            <div class="bgimg-exlibris">
+                <a href="">
+                    <p class="redirigirnegro">/exlibris/</p>
+                </a>
+            </div>
+            <div class="bgimg-producto">
+                <a href="">
+                    <p class="redirigirnegro">/fotografia de producto/</p>
+                </a>
+            </div>
+            <div class="bgimg-microuniversos">
+                <a href="">
+                    <p class="redirigir">/microuniversos/</p>
+                </a>
+            </div>
+            <div class="bgimg-ojos">
+                <a href="">
+                    <p class="redirigir">/ojos/</p>
+                </a>
+            </div>
+            <div class="bgimg-retratos">
+                <a href="">
+                    <p class="redirigir">/retratos/</p>
+                </a>
+            </div>
+        </div>
+        <!-- <div class="container">
+            <div class="bgimg-microuniversos">
+                <a href="">
+                    <p class="redirigir">/mi/</p>
+                </a>
+            </div>
+        </div> -->
+
+
+
         <!-- Aqui meter css grid -->
         <!-- Cada proyecto sera uno de los folders en el drive de fotos.  -->
         <!-- Ve la pagina en la que nos estamos basando para que veas los cuadritos -->
