--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="nav">
         <div class="nav-left">
-            <a href="">
+            <a href="index.html">
                 <h1 class="nav-title">
                     anna casillas
                 </h1>
@@ -27,7 +27,7 @@
             <a href="" class="nav-item">Retratos</a>
             <a href="" class="nav-item">Proyectos</a>
             <a href="" class="nav-item">Naturaleza</a>
-            <a href="contacto.html" class="nav-item">Contacto</a>
+            <a href="" class="nav-item">Contacto</a>
         </div>
     </nav>
     <header class="header">
@@ -61,42 +61,30 @@
         <span onclick="selectContainer(1)" class="button"></span>
         <span onclick="selectContainer(2)" class="button"></span>
     </div>
-    <section class="about">
-        <div class="about-title">
-            ¿Quién soy yo?
-        </div>
-        <div class="about-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur laborum!
-        </div>
-    </section>
-    <section class="proyectos">
-        <h1 class="proyectos-title">Galería</h1>
-        <div class="container">
-            <a class="bgimg bgimg-ajolote" href="">
-                <p class="redirigir">/naturaleza/</p>
-            </a>
-            <a class="bgimg bgimg-autoretratos" href="">
-                <p class="redirigir">/autoretratos/</p>
-            </a>
-            <a class="bgimg bgimg-exlibris" href="">
-                <p class="redirigir">/exlibris/</p>
-            </a>
-            <a class="bgimg bgimg-producto" href="">
-                <p class="redirigir">/fotografia de producto/</p>
-            </a>
-            <a class="bgimg bgimg-microuniversos" href="">
-                <p class="redirigir">/microuniversos/</p>
-            </a>
-            <a class="bgimg bgimg-ojos" href="">
-                <p class="redirigir">/ojos/</p>
-            </a>
-            <a class="bgimg bgimg-retratos" href="">
-                <p class="redirigir">/retratos/</p>
-            </a>
-        </div>
-        <!-- Cada proyecto sera uno de los folders en el drive de fotos.  -->
-        <!-- Ve la pagina en la que nos estamos basando para que veas los cuadritos -->
-    </section>
+    <h1 class="about-title" style="font-size: 6rem;">Contacto</h1>
+
+    <h1 style="margin-top: 2em;"></h1>
+
+    <div class="container2">
+        <a class="containermenor bgimg bgimg-instagram" href="https://instagram.com/_a_n_n_a_c_?igshid=183s1yuo4005r">
+            <img class="svg" src="/img/contacto/instagram.svg" class="svg">
+            <p class="redirigir">_a_n_n_a_c_</p>
+        </a>
+        <a class="containermenor bgimg bgimg-correo" href="">
+            <img class="svg" src="/img/contacto/email.svg">
+            <p class="redirigir" style="font-size: 1.5em; margin-top: 6em;">casillas.annalorena@gmail.com</p>
+        </a>
+        <a class="containermenor bgimg bgimg-px" href="https://500px.com/annacas">
+            <img class="svg" src="/img/contacto/500px.svg">
+            <p class="redirigir">Anna C H</p>
+        </a>
+        <a class="containermenor bgimg bgimg-telefono" href="">
+            <img class="svg" src="/img/contacto/telefono (3).svg">
+            <p class="redirigir">+52-55-1304-8711</p>
+        </a>
+    </div>
+
+
     <script src="./scripts/home.js"></script>
 </body>
 
