--- a/naturaleza.html
+++ b/naturaleza.html
@@ -4,13 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="#">
 
-    <title>Anna Casillas</title>
+    <title>Anna Casillas | Naturaleza</title>
 </head>
 
 <body>
@@ -24,53 +21,43 @@
                     </h1>
                 </div>
             </a>
-        </div> 
+        </div>
         <div id="nav-right" class="nav-right">
             <a class="nav-item nav-close" onclick="closeNav()">&times;</a>
             <a href="./productos.html" class="nav-item">Productos</a>
             <a href="./retratos.html" class="nav-item">Retratos</a>
             <a href="./proyectos.html" class="nav-item">Proyectos</a>
-            <a href="./naturaleza.html" class="nav-item">Naturaleza</a>
+            <a href="#" class="nav-item">Naturaleza</a>
             <a href="./digital.html" class="nav-item">Arte digital</a>
-            <a href="#" class="nav-item">Contacto</a>
+            <a href="./contacto.html" class="nav-item">Contacto</a>
         </div>
         <a class="nav-burger" onclick="openNav()">&#9776;</a>
     </nav>
     <div class="invisible-box"></div>
     <section class="productos">
         <div class="productos-title">
-            Contacto
+            Naturaleza
         </div>
         <div class="productos-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
             vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
             laborum!
         </div>
-        <div class="productos-description">
-            Presiona las redes sociales para ir a su perfil.
-        </div>
-        
     </section>
-
-    <div class="contact-grid">
-        <a class="contact-grid-sub contact-item contact-item-instagram"
-            href="https://instagram.com/_a_n_n_a_c_?igshid=183s1yuo4005r">
-            <img class="svg" src="./img/contacto/instagram.svg" class="svg">
-            <p class="redirigir">_a_n_n_a_c_</p>
+    <section class="grid"> </section>
+    <section class="original">
+        <div class="original-title">
+            ¿Quieres ver las fotos originales?
+        </div>
+        <div class="original-description">
+            ¡Dale click al siguiente botón para ver las fotos en su tamaño original!
+        </div>
+        <a href="https://drive.google.com/drive/folders/1EMmOLyz-DGmii1ZPu8XjG98akHzTYgV6?usp=sharing">
+            <button class="btn">
+                Ver fotos
+            </button>
         </a>
-        <a class="contact-grid-sub contact-item contact-item-correo" href="">
-            <img class="svg" src="./img/contacto/email.svg">
-            <p class="redirigir redirigir-small">casillas.annalorena@gmail.com</p>
-        </a>
-        <a class="contact-grid-sub contact-item contact-item-px" href="https://500px.com/annacas">
-            <img class="svg-big" src="./img/contacto/500px.svg">
-            <p class="redirigir">Anna C H</p>
-        </a>
-        <a class="contact-grid-sub contact-item contact-item-telefono" href="">
-            <img class="svg" src="./img/contacto/telefono (3).svg">
-            <p class="redirigir">+52 551 304 8711</p>
-        </a>
-    </div>
+    </section>
     <footer class="footer">
         <div class="logo-container-2">
             <img class="logo-2" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
@@ -79,7 +66,7 @@
             &copy; Anna Casillas
         </div>
     </footer>
-    <script src="./scripts/contacto.js"></script>
+    <script src="./scripts/naturaleza.js"></script>
 </body>
 
 </html>
