Agregar textos y optimizar SEO

--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
+    <meta name="description"
+        content="Contacto de Anna Casillas, conoce su trabajo asombroso y contáctala en esta página.">
+    <meta name="keywords" content="Anna Casillas, Fotografía, Galería, Arte Digial">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" type="image/png" href="#">
+    <link rel="shortcut icon" type="image/png" href="./img/blanco.jpg">
 
     <title>Anna Casillas</title>
 </head>
@@ -18,13 +18,13 @@
         <div class="nav-left">
             <a href="./index.html">
                 <div class="logo-container">
-                    <img class="logo" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+                    <img class="logo" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
                     <h1 class="nav-title">
                         anna casillas
                     </h1>
                 </div>
             </a>
-        </div> 
+        </div>
         <div id="nav-right" class="nav-right">
             <a class="nav-item nav-close" onclick="closeNav()">&times;</a>
             <a href="./productos.html" class="nav-item">Productos</a>
@@ -42,38 +42,35 @@
             Contacto
         </div>
         <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            ¡Para cotizar cualquier tipo de sesión, proyecto o impresión de alguna imagen no dudes en contactarme!
         </div>
         <div class="productos-description">
-            Presiona las redes sociales para ir a su perfil.
+            Presiona las redes sociales para ir a mis perfiles.
         </div>
-        
     </section>
 
     <div class="contact-grid">
         <a class="contact-grid-sub contact-item contact-item-instagram"
             href="https://instagram.com/_a_n_n_a_c_?igshid=183s1yuo4005r">
-            <img class="svg" src="./img/contacto/instagram.svg" class="svg">
+            <img class="svg" src="./img/contacto/instagram.svg" class="svg" alt="Instagram link">
             <p class="redirigir">_a_n_n_a_c_</p>
         </a>
-        <a class="contact-grid-sub contact-item contact-item-correo" href="">
-            <img class="svg" src="./img/contacto/email.svg">
+        <a class="contact-grid-sub contact-item contact-item-correo">
+            <img class="svg" src="./img/contacto/email.svg" alt="Email icon">
             <p class="redirigir redirigir-small">casillas.annalorena@gmail.com</p>
         </a>
         <a class="contact-grid-sub contact-item contact-item-px" href="https://500px.com/annacas">
-            <img class="svg-big" src="./img/contacto/500px.svg">
+            <img class="svg-big" src="./img/contacto/500px.svg" alt="500px link">
             <p class="redirigir">Anna C H</p>
         </a>
-        <a class="contact-grid-sub contact-item contact-item-telefono" href="">
-            <img class="svg" src="./img/contacto/telefono (3).svg">
+        <a class="contact-grid-sub contact-item contact-item-telefono">
+            <img class="svg" src="./img/contacto/telefono (3).svg" alt="Phone number">
             <p class="redirigir">+52 551 304 8711</p>
         </a>
     </div>
     <footer class="footer">
         <div class="logo-container-2">
-            <img class="logo-2" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+            <img class="logo-2" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
         </div>
         <div class="footer-title">
             &copy; Anna Casillas
