--- a/retratos.html
+++ b/retratos.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Foto-galería de Anna Casillas de sus retratos.">
+    <meta name="keywords" content="Anna Casillas, Fotografía, Galería, Retratos">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" type="image/png" href="#">
+    <link rel="shortcut icon" type="image/png" href="./img/blanco.jpg">
 
     <title>Anna Casillas | Retratos</title>
 </head>
@@ -15,7 +17,7 @@
         <div class="nav-left">
             <a href="./index.html">
                 <div class="logo-container">
-                    <img class="logo" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+                    <img class="logo" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
                     <h1 class="nav-title">
                         anna casillas
                     </h1>
@@ -40,9 +42,8 @@
             Retratos
         </div>
         <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Esta sección corresponde al tipo de retratos que hago, trabajo tanto en estudio como en locación y todo tipo
+            de fotografía: fotografía infantil, de familia o pareja, estilo fine art…
         </div>
     </section>
     <section class="grid"> </section>
@@ -50,11 +51,6 @@
     <section class="productos" id="estudio">
         <div class="productos-title">
             Retratos de Estudio
-        </div>
-        <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
         </div>
     </section>
     <section class="grid2"> </section>
@@ -64,9 +60,7 @@
             Autoretratos
         </div>
         <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Sección dedicada a mis pequeños proyectos de autorretratos.
         </div>
     </section>
     <section class="grid5"> </section>
@@ -75,11 +69,6 @@
         <div class="productos-title">
             Retratos Fine Art
         </div>
-        <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
-        </div>
     </section>
     <section class="grid3"> </section>
 
@@ -87,30 +76,24 @@
         <div class="productos-title">
             Retratos Desnudo
         </div>
-        <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
-        </div>
     </section>
     <section class="grid4"> </section>
-
     <section class="original">
         <div class="original-title">
-            ¿Quieres ver las fotos originales?
+            ¿Quieres una sesión de fotos?
         </div>
         <div class="original-description">
-            ¡Dale click al siguiente botón para ver las fotos en su tamaño original!
+            Si quieres cotizar tu sesión o este producto, ponte en contacto
         </div>
-        <a href="https://drive.google.com/drive/folders/1EMmOLyz-DGmii1ZPu8XjG98akHzTYgV6?usp=sharing">
+        <a href="./contacto.html">
             <button class="btn">
-                Ver fotos
+                Ver contacto
             </button>
         </a>
     </section>
     <footer class="footer">
         <div class="logo-container-2">
-            <img class="logo-2" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+            <img class="logo-2" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
         </div>
         <div class="footer-title">
             &copy; Anna Casillas
