--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Foto-galería de Anna Casillas, conoce sus increíbles trabajos en esta página.">
+    <meta name="keywords" content="Anna Casillas, Fotografía, Galería, Arte Digial">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="./img/blanco.jpg">
 
@@ -15,7 +17,7 @@
         <div class="nav-left">
             <a href="#">
                 <div class="logo-container">
-                    <img class="logo" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+                    <img class="logo" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
                     <h1 class="nav-title">
                         anna casillas
                     </h1>
@@ -69,9 +71,10 @@
             ¿Quién soy yo?
         </div>
         <div class="about-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Soy Anna Casillas, artista de origen mexicano con influencias de diferentes partes del mundo. Artista visual
+            en acuarela y pintura acrílica, técnico en fotografía y estudiante de animación y arte digital. Mi trabajo
+            se concentra mucho en lo digital, es decir edición o arte digital, así como la toma de fotografías de
+            diversos estilos.
         </div>
     </section>
     <section class="proyectos">
@@ -99,11 +102,11 @@
                 <p class="redirigir">/retratos/</p>
             </a>
         </div>
-       
+
     </section>
     <footer class="footer">
         <div class="logo-container-2">
-            <img class="logo-2" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+            <img class="logo-2" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
         </div>
         <div class="footer-title">
             &copy; Anna Casillas
