--- a/naturaleza.html
+++ b/naturaleza.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Foto-galería de Anna Casillas de sus fotos de naturaleza.">
+    <meta name="keywords" content="Anna Casillas, Fotografía, Galería, Naturaleza">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" type="image/png" href="#">
+    <link rel="shortcut icon" type="image/png" href="./img/blanco.jpg">
 
     <title>Anna Casillas | Naturaleza</title>
 </head>
@@ -15,7 +17,7 @@
         <div class="nav-left">
             <a href="./index.html">
                 <div class="logo-container">
-                    <img class="logo" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+                    <img class="logo" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
                     <h1 class="nav-title">
                         anna casillas
                     </h1>
@@ -39,28 +41,26 @@
             Naturaleza
         </div>
         <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Fotografía de animales que he encontrado a lo largo del tiempo.
         </div>
     </section>
     <section class="grid"> </section>
     <section class="original">
         <div class="original-title">
-            ¿Quieres ver las fotos originales?
+            ¿Quieres una sesión de fotos?
         </div>
         <div class="original-description">
-            ¡Dale click al siguiente botón para ver las fotos en su tamaño original!
+            Si quieres cotizar tu sesión o este producto, ponte en contacto
         </div>
-        <a href="https://drive.google.com/drive/folders/1EMmOLyz-DGmii1ZPu8XjG98akHzTYgV6?usp=sharing">
+        <a href="./contacto.html">
             <button class="btn">
-                Ver fotos
+                Ver contacto
             </button>
         </a>
     </section>
     <footer class="footer">
         <div class="logo-container-2">
-            <img class="logo-2" src="./img/logo-no-background.png" alt="Anna Casillas Logo">
+            <img class="logo-2" src="./img/logo-no-background-2.png" alt="Anna Casillas Logo">
         </div>
         <div class="footer-title">
             &copy; Anna Casillas
